falta apenas o teste de sobrepostas

--- a/src/main/webapp/comprovante.xhtml
+++ b/src/main/webapp/comprovante.xhtml
@@ -10,11 +10,11 @@
       xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
     
     <ui:define name="titulo" >
-        Operação Cancelada
+        Emissão comprovante
     </ui:define>
     
     <ui:define name="conteudo">
-        <h1>Comprovante de inscrição</h1>
+        <h1>Comprovante de Inscrição</h1>
         <br/><br/>
         <h3>Inscrição</h3>
         Número: <p:outputLabel value="#{marcacao.vaga.id}"></p:outputLabel>
